KQueryParser/KQueryParserC++/src/parser/KQueryParser.cpp

// Generated from KQuery.g4 by ANTLR 4.7


#include "KQueryListener.h"
#include "KQueryVisitor.h"

#include "KQueryParser.h"


using namespace antlrcpp;
using namespace antlr4;

KQueryParser::KQueryParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

KQueryParser::~KQueryParser() {
  delete _interpreter;
}

std::string KQueryParser::getGrammarFileName() const {
  return "KQuery.g4";
}

const std::vector<std::string>& KQueryParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& KQueryParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- KqueryContext ------------------------------------------------------------------

KQueryParser::KqueryContext::KqueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<KQueryParser::ArrayDeclarationContext *> KQueryParser::KqueryContext::arrayDeclaration() {
  return getRuleContexts<KQueryParser::ArrayDeclarationContext>();
}

KQueryParser::ArrayDeclarationContext* KQueryParser::KqueryContext::arrayDeclaration(size_t i) {
  return getRuleContext<KQueryParser::ArrayDeclarationContext>(i);
}

std::vector<KQueryParser::QueryCommandContext *> KQueryParser::KqueryContext::queryCommand() {
  return getRuleContexts<KQueryParser::QueryCommandContext>();
}

KQueryParser::QueryCommandContext* KQueryParser::KqueryContext::queryCommand(size_t i) {
  return getRuleContext<KQueryParser::QueryCommandContext>(i);
}


size_t KQueryParser::KqueryContext::getRuleIndex() const {
  return KQueryParser::RuleKquery;
}

void KQueryParser::KqueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKquery(this);
}

void KQueryParser::KqueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKquery(this);
}


antlrcpp::Any KQueryParser::KqueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitKquery(this);
  else
    return visitor->visitChildren(this);
}

KQueryParser::KqueryContext* KQueryParser::kquery() {
  KqueryContext *_localctx = _tracker.createInstance<KqueryContext>(_ctx, getState());
  enterRule(_localctx, 0, KQueryParser::RuleKquery);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(30);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case KQueryParser::T__0: {
          setState(28);
          arrayDeclaration();
          break;
        }

        case KQueryParser::T__8: {
          setState(29);
          queryCommand();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(32); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == KQueryParser::T__0

    || _la == KQueryParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDeclarationContext ------------------------------------------------------------------

KQueryParser::ArrayDeclarationContext::ArrayDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* KQueryParser::ArrayDeclarationContext::IDENTIFIER() {
  return getToken(KQueryParser::IDENTIFIER, 0);
}

tree::TerminalNode* KQueryParser::ArrayDeclarationContext::NUMBER() {
  return getToken(KQueryParser::NUMBER, 0);
}

std::vector<tree::TerminalNode *> KQueryParser::ArrayDeclarationContext::TYPE() {
  return getTokens(KQueryParser::TYPE);
}

tree::TerminalNode* KQueryParser::ArrayDeclarationContext::TYPE(size_t i) {
  return getToken(KQueryParser::TYPE, i);
}

KQueryParser::ArrayInitializerContext* KQueryParser::ArrayDeclarationContext::arrayInitializer() {
  return getRuleContext<KQueryParser::ArrayInitializerContext>(0);
}

KQueryParser::ConstInitializerContext* KQueryParser::ArrayDeclarationContext::constInitializer() {
  return getRuleContext<KQueryParser::ConstInitializerContext>(0);
}


size_t KQueryParser::ArrayDeclarationContext::getRuleIndex() const {
  return KQueryParser::RuleArrayDeclaration;
}

void KQueryParser::ArrayDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayDeclaration(this);
}

void KQueryParser::ArrayDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayDeclaration(this);
}


antlrcpp::Any KQueryParser::ArrayDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitArrayDeclaration(this);
  else
    return visitor->visitChildren(this);
}

KQueryParser::ArrayDeclarationContext* KQueryParser::arrayDeclaration() {
  ArrayDeclarationContext *_localctx = _tracker.createInstance<ArrayDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, KQueryParser::RuleArrayDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(58);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(34);
      match(KQueryParser::T__0);
      setState(35);
      match(KQueryParser::IDENTIFIER);
      setState(36);
      match(KQueryParser::T__1);
      setState(37);
      match(KQueryParser::NUMBER);
      setState(38);
      match(KQueryParser::T__2);
      setState(39);
      match(KQueryParser::T__3);
      setState(40);
      match(KQueryParser::TYPE);
      setState(41);
      match(KQueryParser::T__4);
      setState(42);
      match(KQueryParser::TYPE);
      setState(43);
      match(KQueryParser::T__5);
      setState(44);
      arrayInitializer();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(45);
      match(KQueryParser::T__0);
      setState(46);
      match(KQueryParser::IDENTIFIER);
      setState(47);
      match(KQueryParser::T__1);
      setState(48);
      match(KQueryParser::T__2);
      setState(49);
      match(KQueryParser::T__3);
      setState(50);
      match(KQueryParser::TYPE);
      setState(51);
      match(KQueryParser::T__4);
      setState(52);
      match(KQueryParser::TYPE);
      setState(53);
      match(KQueryParser::T__5);
      setState(54);
      match(KQueryParser::T__1);
      setState(55);
      constInitializer(0);
      setState(56);
      match(KQueryParser::T__2);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayInitializerContext ------------------------------------------------------------------

KQueryParser::ArrayInitializerContext::ArrayInitializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KQueryParser::ConstInitializerContext* KQueryParser::ArrayInitializerContext::constInitializer() {
  return getRuleContext<KQueryParser::ConstInitializerContext>(0);
}


size_t KQueryParser::ArrayInitializerContext::getRuleIndex() const {
  return KQueryParser::RuleArrayInitializer;
}

void KQueryParser::ArrayInitializerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayInitializer(this);
}

void KQueryParser::ArrayInitializerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayInitializer(this);
}


antlrcpp::Any KQueryParser::ArrayInitializerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitArrayInitializer(this);
  else
    return visitor->visitChildren(this);
}

KQueryParser::ArrayInitializerContext* KQueryParser::arrayInitializer() {
  ArrayInitializerContext *_localctx = _tracker.createInstance<ArrayInitializerContext>(_ctx, getState());
  enterRule(_localctx, 4, KQueryParser::RuleArrayInitializer);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case KQueryParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(60);
        match(KQueryParser::T__6);
        break;
      }

      case KQueryParser::T__1: {
        enterOuterAlt(_localctx, 2);
        setState(61);
        match(KQueryParser::T__1);
        setState(62);
        constInitializer(0);
        setState(63);
        match(KQueryParser::T__2);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstInitializerContext ------------------------------------------------------------------

KQueryParser::ConstInitializerContext::ConstInitializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* KQueryParser::ConstInitializerContext::NUMBER() {
  return getToken(KQueryParser::NUMBER, 0);
}

KQueryParser::ConstInitializerContext* KQueryParser::ConstInitializerContext::constInitializer() {
  return getRuleContext<KQueryParser::ConstInitializerContext>(0);
}


size_t KQueryParser::ConstInitializerContext::getRuleIndex() const {
  return KQueryParser::RuleConstInitializer;
}

void KQueryParser::ConstInitializerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstInitializer(this);
}

void KQueryParser::ConstInitializerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstInitializer(this);
}


antlrcpp::Any KQueryParser::ConstInitializerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitConstInitializer(this);
  else
    return visitor->visitChildren(this);
}


KQueryParser::ConstInitializerContext* KQueryParser::constInitializer() {
   return constInitializer(0);
}

KQueryParser::ConstInitializerContext* KQueryParser::constInitializer(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  KQueryParser::ConstInitializerContext *_localctx = _tracker.createInstance<ConstInitializerContext>(_ctx, parentState);
  KQueryParser::ConstInitializerContext *previousContext = _localctx;
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, KQueryParser::RuleConstInitializer, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(68);
      match(KQueryParser::NUMBER);
      break;
    }

    case 2: {
      setState(69);
      match(KQueryParser::NUMBER);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(79);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(77);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ConstInitializerContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleConstInitializer);
          setState(72);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(73);
          match(KQueryParser::T__7);
          setState(74);
          match(KQueryParser::NUMBER);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ConstInitializerContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleConstInitializer);
          setState(75);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(76);
          match(KQueryParser::NUMBER);
          break;
        }

        } 
      }
      setState(81);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- QueryCommandContext ------------------------------------------------------------------

KQueryParser::QueryCommandContext::QueryCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

KQueryParser::ConstraintListContext* KQueryParser::QueryCommandContext::constraintList() {
  return getRuleContext<KQueryParser::ConstraintListContext>(0);
}

KQueryParser::ExpressionContext* KQueryParser::QueryCommandContext::expression() {
  return getRuleContext<KQueryParser::ExpressionContext>(0);
}

KQueryParser::EvalExprListContext* KQueryParser::QueryCommandContext::evalExprList() {
  return getRuleContext<KQueryParser::EvalExprListContext>(0);
}

KQueryParser::EvalArrayListContext* KQueryParser::QueryCommandContext::evalArrayList() {
  return getRuleContext<KQueryParser::EvalArrayListContext>(0);
}


size_t KQueryParser::QueryCommandContext::getRuleIndex() const {
  return KQueryParser::RuleQueryCommand;
}

void KQueryParser::QueryCommandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQueryCommand(this);
}

void KQueryParser::QueryCommandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQueryCommand(this);
}


antlrcpp::Any KQueryParser::QueryCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitQueryCommand(this);
  else
    return visitor->visitChildren(this);
}

KQueryParser::QueryCommandContext* KQueryParser::queryCommand() {
  QueryCommandContext *_localctx = _tracker.createInstance<QueryCommandContext>(_ctx, getState());
  enterRule(_localctx, 8, KQueryParser::RuleQueryCommand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(96);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(82);
      match(KQueryParser::T__8);
      setState(83);
      match(KQueryParser::T__9);
      setState(84);
      constraintList();
      setState(85);
      expression();
      setState(86);
      match(KQueryParser::T__10);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(88);
      match(KQueryParser::T__8);
      setState(89);
      match(KQueryParser::T__9);
      setState(90);
      constraintList();
      setState(91);
      expression();
      setState(92);
      evalExprList();
      setState(93);
      evalArrayList();
      setState(94);
      match(KQueryParser::T__10);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstraintListContext ------------------------------------------------------------------

KQueryParser::ConstraintListContext::ConstraintListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<KQueryParser::ExpressionContext *> KQueryParser::ConstraintListContext::expression() {
  return getRuleContexts<KQueryParser::ExpressionContext>();
}

KQueryParser::ExpressionContext* KQueryParser::ConstraintListContext::expression(size_t i) {
  return getRuleContext<KQueryParser::ExpressionContext>(i);
}


size_t KQueryParser::ConstraintListContext::getRuleIndex() const {
  return KQueryParser::RuleConstraintList;
}

void KQueryParser::ConstraintListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstraintList(this);
}

void KQueryParser::ConstraintListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstraintList(this);
}


antlrcpp::Any KQueryParser::ConstraintListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitConstraintList(this);
  else
    return visitor->visitChildren(this);
}

KQueryParser::ConstraintListContext* KQueryParser::constraintList() {
  ConstraintListContext *_localctx = _tracker.createInstance<ConstraintListContext>(_ctx, getState());
  enterRule(_localctx, 10, KQueryParser::RuleConstraintList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(KQueryParser::T__1);
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << KQueryParser::T__1)
      | (1ULL << KQueryParser::T__8)
      | (1ULL << KQueryParser::NUMBER))) != 0) || _la == KQueryParser::IDENTIFIER) {
      setState(99);
      expression();
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(105);
    match(KQueryParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EvalExprListContext ------------------------------------------------------------------

KQueryParser::EvalExprListContext::EvalExprListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<KQueryParser::ExpressionContext *> KQueryParser::EvalExprListContext::expression() {
  return getRuleContexts<KQueryParser::ExpressionContext>();
}

KQueryParser::ExpressionContext* KQueryParser::EvalExprListContext::expression(size_t i) {
  return getRuleContext<KQueryParser::ExpressionContext>(i);
}


size_t KQueryParser::EvalExprListContext::getRuleIndex() const {
  return KQueryParser::RuleEvalExprList;
}

void KQueryParser::EvalExprListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEvalExprList(this);
}

void KQueryParser::EvalExprListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEvalExprList(this);
}


antlrcpp::Any KQueryParser::EvalExprListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitEvalExprList(this);
  else
    return visitor->visitChildren(this);
}

KQueryParser::EvalExprListContext* KQueryParser::evalExprList() {
  EvalExprListContext *_localctx = _tracker.createInstance<EvalExprListContext>(_ctx, getState());
  enterRule(_localctx, 12, KQueryParser::RuleEvalExprList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(KQueryParser::T__1);
    setState(111);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << KQueryParser::T__1)
      | (1ULL << KQueryParser::T__8)
      | (1ULL << KQueryParser::NUMBER))) != 0) || _la == KQueryParser::IDENTIFIER) {
      setState(108);
      expression();
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(114);
    match(KQueryParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EvalArrayListContext ------------------------------------------------------------------

KQueryParser::EvalArrayListContext::EvalArrayListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> KQueryParser::EvalArrayListContext::IDENTIFIER() {
  return getTokens(KQueryParser::IDENTIFIER);
}

tree::TerminalNode* KQueryParser::EvalArrayListContext::IDENTIFIER(size_t i) {
  return getToken(KQueryParser::IDENTIFIER, i);
}


size_t KQueryParser::EvalArrayListContext::getRuleIndex() const {
  return KQueryParser::RuleEvalArrayList;
}

void KQueryParser::EvalArrayListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEvalArrayList(this);
}

void KQueryParser::EvalArrayListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<KQueryListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEvalArrayList(this);
}


antlrcpp::Any KQueryParser::EvalArrayListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<KQueryVisitor*>(visitor))
    return parserVisitor->visitEvalArrayList(this);
  else
    return visitor->visitChildren(this);
}
